# method-dep

./: .gitignore  ARCHITECTURE.md  README.md  config.example.yaml  pyproject.toml
.omc/sessions/: 99cb9fbd-089d-40f9-bf52-1908d16add59.json
scripts/: README.md  fetch_bundled_ctags.py  ralph_test_from_json.ps1  ralph_test_from_json.sh
scripts/lib/: build_prompt.py  check_coverage.py  merge_state.py
scripts/templates/prompts/: default.md
scripts/templates/test_project/: CMakeLists.txt  main.cpp
src/method_dep/: __init__.py  cli.py  config.py  context.py  dependency.py  extractor.py  llm.py  models.py  runner.py  tracker.py  workflow.py
src/methoddep/: cli.py  config.py  determinism.py  doctor.py  pipeline.py  verify_fixtures.py
src/methoddep/_bundled/: __init__.py
src/methoddep/_bundled/ctags/: README.md  __init__.py
src/methoddep/_bundled/ctags/linux-x64/: ctags
src/methoddep/_shim/: __init__.py
src/methoddep/_shim/binlog2xml/: Program.cs  __init__.py  binlog2xml.csproj
src/methoddep/analyze/: __init__.py  clang_analyzer.py  models.py  treesitter_analyzer.py
src/methoddep/complexity/: __init__.py  lizard_runner.py
src/methoddep/fixtures/: __init__.py  annotation_parser.py
src/methoddep/index/: __init__.py  ctags_index.py  merge.py  models.py  treesitter_index.py
src/methoddep/mocks/: __init__.py  gmock_skeleton.py  resolver.py
src/methoddep/schema/: emit.py  hash.py  models.py  paths.py
src/methoddep/workspace/: __init__.py  _filter.py  composer.py  copy_tree.py  git_worktree.py  sparse_checkout.py  symlink_tree.py
templates/: test_prompt.md
test_sample/: compile_commands.json
test_sample/include/: calculator.h
test_sample/src/: calculator.cpp
tests/fixtures/cpp-samples/: README.md
tests/fixtures/cpp-samples/free_functions/include/util/: Hash.h
tests/fixtures/cpp-samples/free_functions/src/acme/util/: Extra.cpp  Hash.cpp
tests/fixtures/cpp-samples/generated_sources/src/acme/: moc_widget.cpp  resources.rc
tests/fixtures/cpp-samples/gmock_pattern/include/net/: IClient.h
tests/fixtures/cpp-samples/gmock_pattern/src/acme/net/: Extras.cpp  Session.cpp
tests/fixtures/cpp-samples/gmock_pattern/tests/mocks/: MockIClient.h
tests/fixtures/cpp-samples/interface_impl/include/foo/: Bar.h  IService.h
tests/fixtures/cpp-samples/interface_impl/src/acme/foo/: Bar.cpp
tests/fixtures/cpp-samples/interface_impl/src/globex/foo/: Bar.cpp
tests/fixtures/cpp-samples/interface_impl/tests/mocks/: MockIService.h
tests/fixtures/cpp-samples/mfc_atl_macros/include/mfcish/: Dialog.h
tests/fixtures/cpp-samples/mfc_atl_macros/src/acme/mfcish/: Dialog.cpp
tests/fixtures/cpp-samples/pch_project/include/: pch.h
tests/fixtures/cpp-samples/pch_project/include/pch/: Service.h
tests/fixtures/cpp-samples/pch_project/src/acme/pch/: Service.cpp
tests/fixtures/cpp-samples/templated/include/tpl/: Container.h
tests/fixtures/cpp-samples/templated/src/acme/tpl/: User.cpp
tests/fixtures/cpp-samples/unity_build/include/mod/: A.h  B.h
tests/fixtures/cpp-samples/unity_build/src/acme/: unity_Batch1.cpp
tests/fixtures/cpp-samples/unity_build/src/acme/mod/: A.cpp  B.cpp
tests/fixtures/cpp-samples/with_deps/include/svc/: Pipeline.h
tests/fixtures/cpp-samples/with_deps/src/acme/svc/: Pipeline.cpp
tests/integration/: test_fixture_coverage.py
tests/unit/: test_annotation_parser.py  test_build_intel.py  test_build_intel_wiring.py  test_clang_analyzer.py  test_config.py  test_doctor.py  test_emit.py  test_hash.py  test_index_merge.py  test_lizard.py  test_mocks_resolver.py  test_paths.py  test_pipeline.py  test_scope_filter.py  test_treesitter_analyzer.py  test_treesitter_index.py  test_verify_fixtures.py  test_workspace.py
