[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "method-dep"
version = "0.1.0"
description = "C++ method-level unit test generation workflow with LLM"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.22.0",
    "tree-sitter-cpp>=0.22.0",
    "pyyaml>=6.0",
]

[project.scripts]
method-dep = "method_dep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
