[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methoddep"
version = "0.1.0"
description = "Per-method C++/MSVC intel gatherer for unit test scaffolding"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "method-dep2" }]

dependencies = [
    "click>=8.1,<9",
    "pydantic>=2.7,<3",
    "rich>=13,<14",
    "libclang>=18.1.1,<20",
    "tree-sitter>=0.23,<0.26",          # py3.13 wheel availability
    "tree-sitter-cpp>=0.23,<0.24",
    "lizard>=1.17,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
]

[project.scripts]
methoddep = "methoddep.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["methoddep*"]

[tool.setuptools.package-data]
# Ship the binlog→XML shim (C# source + csproj) inside the wheel so
# `methoddep doctor` / the build-intel L0 path can build it on demand.
"methoddep._shim.binlog2xml" = ["*.csproj", "*.cs"]
# Ship platform-specific Universal Ctags binaries for offline installs.
# The resolver in `methoddep._bundled.ctags` matches the subdir at runtime.
"methoddep._bundled.ctags" = [
    "README.md",
    "windows-x64/ctags.exe",
    "windows-x64/.gitkeep",
    "linux-x64/ctags",
    "linux-x64/.gitkeep",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
python_classes = ["Test*Case", "_Test*"]   # avoid collecting pydantic models named "TestConfig" etc.

[tool.coverage.run]
source = ["src/methoddep"]
branch = true
